--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                   Freelance Graphics Designer<br />Product Designer
                </p>
                <a
-                  href="./assets/files/TJ-Resume.pdf"
+                  href="./assets/files/ednaresume.pdf"
                   download
                   class="btn btn-pseudo"
                   data-aos="fade-up"
@@ -768,31 +768,40 @@
                </div>
             </div>
             <div class="row gx-10 gy-5">
-               <!-- Single Skill-->
+               <!-- Experience-->
                <div class="col-12 col-md-6" data-aos="reveal-down">
                   <div class="d-flex align-items-start mb-3 flex-column flex-lg-row align-items-lg-center">
-                     <h4>UI/UX Intern</h4>
-                     <span class="text-muted ms-lg-2">(April 2024 - present)</span>
+                     <h4>Graphics Designer - Bloom Green Energy</h4>
+                     <span class="text-muted ms-lg-2">(August 2023 - present)</span>
                   </div>
                   <p class="opacity-90">
-                     I joined Coriftech Solutions as a UI/UX design intern, where we focus on innovative design
-                     solutions, utilizing cutting-edge technology to create impactful products and experiences. It's an
-                     exciting environment where I can apply my skills to contribute to meaningful projects.
+                     I joined Bloom Green Energy as a Graphics Designer, a company which focuses on Sustainability and Energy Efficiency. The team is dedicated to Designing and implementing cohesive sets of visual assets, utilizing various design tools to create social media graphics, attractive product flyers, and polished company letterheads and complimentary cards. It's an inspiring environment where I can apply my skills to [Your Contribution/Role] and contribute to meaningful projects.
                   </p>
                </div>
-               <!-- / Single Skill -->
-               <!-- Single Skill-->
+               <!-- / Experience -->
+               <!-- Experience-->
                <div class="col-12 col-md-6" data-aos="reveal-down">
                   <div class="d-flex align-items-start mb-3 flex-column flex-lg-row align-items-lg-center">
-                     <h4>Freelance Designer</h4>
-                     <span class="text-muted ms-lg-2">(2021 - present)</span>
+                     <h4>Graphics Designer - Super Team NG</h4>
+                     <span class="text-muted ms-lg-2">(July 2024 - present)</span>
                   </div>
                   <p class="opacity-90">
-                     Since 2021, I've been flourishing as a freelance graphic designer, tackling a variety of projects
-                     independently and continuously refining my craft while staying updated on the latest design trends
-                     and technologies.
+                     As a Graphics Designer at Super Team NG, I'm part of a dynamic team that is dedicated to helping individuals learn, earn, and build in the Solana blockchain ecosystem. This role allows me to utilize my expertise in  various Design tools to contribute to projects that enhancing the overall presentation and user experience.
                   </p>
                </div>
+               <!-- Experience-->
+               <!-- Experience-->
+               <div class="col-12 col-md-6" data-aos="reveal-down">
+                  <div class="d-flex align-items-start mb-3 flex-column flex-lg-row align-items-lg-center">
+                     <h4>Associate Graphics Designer - Coriftech Solutions LTD</h4>
+                     <span class="text-muted ms-lg-2">(September 2023 - August 2024)</span>
+                  </div>
+                  <p class="opacity-90">
+                     I joined Coriftech Solutions Ltd as an Associate Graphic Designer, where I collaborate with a creative team to develop visually compelling designs that align with Company’s Mission and Brand Identity. Our work focuses on creating awareness and sensitization in the younger generation and also designing certificates for student using various design tools to produce high-quality visuals that resonate with our target audience. This position allowed me to refine my design skills and contribute to impactful projects that enhance our brand presence.
+                  </p>
+               </div>
+               <!-- Experience-->
+
             </div>
             <div class="d-flex justify-content-md-center mt-5 py-1" data-aos="reveal-up">
                <a href="./assets/files/TJ-Resume.pdf" download class="btn btn-pseudo"
@@ -940,20 +949,20 @@
             class="text-warning display-6 font-serif tracking-wide text-decoration-none"
             data-aos="reveal-right"
             data-aos-delay="1200"
-            >t3jiri@gmail.com</a
+            >aisosa.igori@gmail.com</a
          >
 
          <ul class="list-unstyled d-flex mt-5 mb-4" data-aos="fade-up">
             <li class="me-7">
                <a
                   class="text-body text-decoration-none"
-                  href="https://www.linkedin.com/in/tejiri-ejiro-62164b307?trk=contact-info"
+                  href="https://www.linkedin.com/in/edna-igori-a53998216"
                   >LinkedIn</a
                >
             </li>
-            <li class="me-7">
+            <!-- <li class="me-7">
                <a class="text-body text-decoration-none" href="https://x.com/tjaytech_">Twitter</a>
-            </li>
+            </li> -->
          </ul>
       </footer>
       <!-- / Footer-->
@@ -1037,11 +1046,11 @@
                   <ul class="m-0 p-0 list-unstyled">
                      <li class="d-flex align-items-center mb-3">
                         <i class="ri-mail-line me-3 text-primary"></i>
-                        <span>t3jiri@gmail.com</span>
+                        <span>aisosa.igori@gmail.com</span>
                      </li>
                      <li class="d-flex align-items-center">
                         <i class="ri-smartphone-line me-3 text-primary"></i>
-                        <span>+2349078615480</span>
+                        <span>+2348105143705</span>
                      </li>
                   </ul>
                </div>
