--- a/index.html
+++ b/index.html
@@ -545,22 +545,6 @@
                   class="portfolio-item"
                   data-bs-toggle="modal"
                   data-bs-target="#portfolioModal"
-                  data-portfolio-img="./assets/images/img-6.jpeg"
-                  data-portfolio-title="Inca Skull"
-                  data-portfolio-description="Poster illustration created for a club&#x27;s annual summer party. Also created stickers, logos and various website elements."
-                  data-portfolio-client="VonHaus Designs"
-                  data-portfolio-date=""
-                  data-portfolio-category="Illustration"
-               >
-                  <picture class="d-block" data-aos="reveal-left">
-                     <img class="img-fluid" src="./assets/images/img-6.jpeg" alt="" />
-                  </picture>
-               </div>
-
-               <div
-                  class="portfolio-item"
-                  data-bs-toggle="modal"
-                  data-bs-target="#portfolioModal"
                   data-portfolio-img="./assets/images/img-7.jpeg"
                   data-portfolio-title="Inca Skull"
                   data-portfolio-description="Poster illustration created for a club&#x27;s annual summer party. Also created stickers, logos and various website elements."
@@ -748,6 +732,22 @@
                      <img class="img-fluid" src="./assets/images/img-18.jpeg" alt="" />
                   </picture>
                </div>
+
+               <div
+                  class="portfolio-item"
+                  data-bs-toggle="modal"
+                  data-bs-target="#portfolioModal"
+                  data-portfolio-img="./assets/images/img-6.jpeg"
+                  data-portfolio-title="Inca Skull"
+                  data-portfolio-description="Poster illustration created for a club&#x27;s annual summer party. Also created stickers, logos and various website elements."
+                  data-portfolio-client="VonHaus Designs"
+                  data-portfolio-date=""
+                  data-portfolio-category="Illustration"
+               >
+                  <picture class="d-block" data-aos="reveal-left">
+                     <img class="img-fluid" src="./assets/images/img-6.jpeg" alt="" />
+                  </picture>
+               </div>
             </div>
          </div>
          <!-- / My Portfolio-->
@@ -775,7 +775,7 @@
                      <span class="text-muted ms-lg-2">(August 2023 - present)</span>
                   </div>
                   <p class="opacity-90">
-                     I joined Bloom Green Energy as a Graphics Designer, a company which focuses on Sustainability and Energy Efficiency. The team is dedicated to Designing and implementing cohesive sets of visual assets, utilizing various design tools to create social media graphics, attractive product flyers, and polished company letterheads and complimentary cards. It's an inspiring environment where I can apply my skills to [Your Contribution/Role] and contribute to meaningful projects.
+                     I joined Bloom Green Energy as a Graphics Designer, a company which focuses on Sustainability and Energy Efficiency. The team is dedicated to Designing and implementing cohesive sets of visual assets, utilizing various design tools to create social media graphics, attractive product flyers, and polished company letterheads and complimentary cards. It's an inspiring environment where I can apply my skills and contribute to meaningful projects.
                   </p>
                </div>
                <!-- / Experience -->
