--- a/index.html
+++ b/index.html
@@ -460,7 +460,6 @@
                </div>
             </div>
             <div class="portfolio-listing">
-
                <div
                   class="portfolio-item"
                   data-bs-toggle="modal"
@@ -775,7 +774,11 @@
                      <span class="text-muted ms-lg-2">(August 2023 - present)</span>
                   </div>
                   <p class="opacity-90">
-                     I joined Bloom Green Energy as a Graphics Designer, a company which focuses on Sustainability and Energy Efficiency. The team is dedicated to Designing and implementing cohesive sets of visual assets, utilizing various design tools to create social media graphics, attractive product flyers, and polished company letterheads and complimentary cards. It's an inspiring environment where I can apply my skills and contribute to meaningful projects.
+                     I joined Bloom Green Energy as a Graphics Designer, a company which focuses on Sustainability and
+                     Energy Efficiency. The team is dedicated to Designing and implementing cohesive sets of visual
+                     assets, utilizing various design tools to create social media graphics, attractive product flyers,
+                     and polished company letterheads and complimentary cards. It's an inspiring environment where I can
+                     apply my skills and contribute to meaningful projects.
                   </p>
                </div>
                <!-- / Experience -->
@@ -786,7 +789,10 @@
                      <span class="text-muted ms-lg-2">(July 2024 - present)</span>
                   </div>
                   <p class="opacity-90">
-                     As a Graphics Designer at Super Team NG, I'm part of a dynamic team that is dedicated to helping individuals learn, earn, and build in the Solana blockchain ecosystem. This role allows me to utilize my expertise in  various Design tools to contribute to projects that enhancing the overall presentation and user experience.
+                     As a Graphics Designer at Super Team NG, I'm part of a dynamic team that is dedicated to helping
+                     individuals learn, earn, and build in the Solana blockchain ecosystem. This role allows me to
+                     utilize my expertise in various Design tools to contribute to projects that enhancing the overall
+                     presentation and user experience.
                   </p>
                </div>
                <!-- Experience-->
@@ -797,11 +803,15 @@
                      <span class="text-muted ms-lg-2">(September 2023 - August 2024)</span>
                   </div>
                   <p class="opacity-90">
-                     I joined Coriftech Solutions Ltd as an Associate Graphic Designer, where I collaborate with a creative team to develop visually compelling designs that align with Company’s Mission and Brand Identity. Our work focuses on creating awareness and sensitization in the younger generation and also designing certificates for student using various design tools to produce high-quality visuals that resonate with our target audience. This position allowed me to refine my design skills and contribute to impactful projects that enhance our brand presence.
+                     I joined Coriftech Solutions Ltd as an Associate Graphic Designer, where I collaborate with a
+                     creative team to develop visually compelling designs that align with Company’s Mission and Brand
+                     Identity. Our work focuses on creating awareness and sensitization in the younger generation and
+                     also designing certificates for student using various design tools to produce high-quality visuals
+                     that resonate with our target audience. This position allowed me to refine my design skills and
+                     contribute to impactful projects that enhance our brand presence.
                   </p>
                </div>
                <!-- Experience-->
-
             </div>
             <div class="d-flex justify-content-md-center mt-5 py-1" data-aos="reveal-up">
                <a href="./assets/files/TJ-Resume.pdf" download class="btn btn-pseudo"
@@ -954,9 +964,7 @@
 
          <ul class="list-unstyled d-flex mt-5 mb-4" data-aos="fade-up">
             <li class="me-7">
-               <a
-                  class="text-body text-decoration-none"
-                  href="https://www.linkedin.com/in/edna-igori-a53998216"
+               <a class="text-body text-decoration-none" href="https://www.linkedin.com/in/edna-igori-a53998216"
                   >LinkedIn</a
                >
             </li>
